#1099 Document updated and added methods